    * pixmaps/Makefile.am:
    * pixmaps/seahorse-share-keys.png:
    * pixmaps/seahorse-share-keys.xcf:
    * src/seahorse-keyserver-search.c:
    * src/seahorse-keyserver-search.glade: Add DNS-SD key sharing
    * daemon/Makefile.am: Fix problem building with agent
    * plugins/nautilus/seahorse-pgp-preferences.c: Add necessary argument
    to allow display of the 'sharing' tab.
    
2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>

	* Merge seahorse-0-8 changes into HEAD
    * HACKING:
    * Makefile.am:
    * configure.in:
    * agent/eggtrayicon.* (removed):
    * agent/seahorse-agent-io.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * daemon/Makefile.am:
    * daemon/seahorse-daemon.c:
    * daemon/seahorse-daemon.h:
    * libseahorse/Makefile.am:
    * libseahorse/eggtrayicon.c:
    * libseahorse/eggtrayicon.h:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Moved agent into seahorse-daemon
    process. 
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-prefs.h:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-search.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-preferences.c:
    * src/seahorse-preferences.h: Identify preference tabs by the widgets 
    in them not by index, since the number of tabs differs depending on 
    compile options.
    * daemon/Makefile.am: If --disable-agent don't include agent code 
    in seahorse-daemon

2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>

	* Merge seahorse-0-8 changes into HEAD

2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gconf.c:
    * libseahorse/seahorse-hkp-source.c: Fix compiler warnings
    
2005-05-14  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-preferences.c: HIGify 'Visible Columns' tab.
    Patch from Jim Pharis (bug #304212)
    