@@ -144,10 +144,10 @@ static void
 prefs_activate (GtkWidget *item, gpointer data)
 {
     GError *err = NULL;
-    g_spawn_command_line_async ("seahorse-pgp-preferences --sharing", &err);
+    g_spawn_command_line_async ("seahorse-preferences --sharing", &err);
     
     if (err != NULL) {
-        g_warning ("couldn't execute seahorse-pgp-preferences: %s", err->message);
+        g_warning ("couldn't execute seahorse-preferences: %s", err->message);
         g_error_free (err);
     }
 }
