@@ -2,6 +2,7 @@ Makefile
 Makefile.in
 Seahorse_Component.server
 Seahorse_Component.server.in
+seahorse-preferences
 seahorse-pgp-preferences
 seahorse-pgp-preferences.gladep
 seahorse-pgp-preferences.desktop
