@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Encryption Preferences
 _Comment=Configure key servers and other encryption settings
-Exec=seahorse-pgp-preferences
+Exec=seahorse-preferences
 Terminal=false
 Type=Application
 Icon=gnome-mime-application-pgp-keys.png
