@@ -27,6 +27,11 @@
     * daemon/Makefile.am: Fix problem building with agent
     * plugins/nautilus/seahorse-pgp-preferences.c: Add necessary argument
     to allow display of the 'sharing' tab.
+    * agent/seahorse-agent-status.c:
+    * daemon/seahorse-sharing.c:
+    * plugins/nautilus/Makefile.am:
+    * plugins/nautilus/seahorse-pgp-preferences.desktop.in: Rename the 
+    seahorse-pgp-preferences program to seahorse-preferences
     
 2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>
 
